--- a/csr-angular/frontend/csr-ui/src/app/ticketdetailcard/ticketdetailcard.component.html
+++ b/csr-angular/frontend/csr-ui/src/app/ticketdetailcard/ticketdetailcard.component.html
@@ -21,7 +21,7 @@
             </form>
             </div>
         </mat-card-content>
-        <app-suggestion [ticketId]="ticketId" [intent]="intent"></app-suggestion>
+        <app-suggestion [ticketId]="ticketId" [intents]="intent"></app-suggestion>
         <mat-card-actions>
             <div class="wrapper1">
                 <button mat-stroked-button color="primary" (click)="openDialog('report')">Report User</button>
