--- a/reportgenerationangular/frontend/ReportGenerationUI/src/app/list/list.component.css
+++ b/reportgenerationangular/frontend/ReportGenerationUI/src/app/list/list.component.css
@@ -112,3 +112,18 @@ section {
 .raisedby {
     margin-top: 0%;
 }
+
+.emptyData {
+    width: 100%;
+    height: 100%;
+    background-color: #dacfcf30;
+}
+
+.emptyDataInfo {
+    font-size: 150%;
+    position: relative;
+    float: left;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
