trying to display commandlist

--- a/csr-angular/frontend/csr-ui/src/app/commandlist/commandlist.component.html
+++ b/csr-angular/frontend/csr-ui/src/app/commandlist/commandlist.component.html
@@ -3,5 +3,6 @@
     <p>{{ error }}</p>
 </div>
 <div *ngIf="!error">
-    <app-command [commands]="commands" (command)="onSelectCommand($event)"></app-command>
+    <app-command [commands]="commands"></app-command>
+
 </div>
