--- a/reportgenerationangular/frontend/ReportGenerationUI/src/app/entity-outlier/entity-outlier.component.css
+++ b/reportgenerationangular/frontend/ReportGenerationUI/src/app/entity-outlier/entity-outlier.component.css
@@ -6,9 +6,7 @@
 .main {
     padding-left: 2%;
     padding-right: 2%;
-    /* padding-bottom: 2%; */
-    /* display: flex;
-    flex-wrap: wrap; */
+    padding-bottom: 1%;
 }
 
 .linechart {
@@ -26,7 +24,6 @@
 .scroll {
     height: 350px;
     overflow: auto;
-    /* overflow-y: scroll; */
 }
 
 .mat-header-row {
@@ -53,8 +50,6 @@
     padding-top: 2%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    /* grid-column-gap: 10px;
-    grid-row-gap: 10px; */
 }
 
 .mat-checkbox {
