--- a/reportgenerationangular/frontend/ReportGenerationUI/src/app/service-outlier/service-outlier.component.css
+++ b/reportgenerationangular/frontend/ReportGenerationUI/src/app/service-outlier/service-outlier.component.css
@@ -4,10 +4,10 @@
 }
 
 .main {
-    /* margin-top: 5%; */
     padding-left: 2%;
     padding-right: 2%;
     padding-top: 3%;
+    padding-bottom: 2%;
 }
 
 .mat-checkbox {
