--- a/reportgenerationangular/frontend/ReportGenerationUI/src/app/list/list.component.css
+++ b/reportgenerationangular/frontend/ReportGenerationUI/src/app/list/list.component.css
@@ -26,14 +26,19 @@ mat-form-field {
 }
 
 .item {
+    /* margin-top: 2%; */
+    /* padding-left: 1%; */
     padding-right: 1%;
     display: inline-block;
 }
 
 .infinityscroll {
+    /* padding-top: 4%; */
     height: 22rem;
     overflow: scroll;
     overflow-x: hidden;
+    /* overflow-y: scroll; */
+    /* overflow: auto; */
 }
 
 section {
@@ -69,8 +74,11 @@ section {
 }
 
 .one {
+    /* padding-top: 2%; */
     display: grid;
     grid-template-columns: 12% 1fr 15%;
+    /* grid-column-gap: 10px;
+    grid-row-gap: 10px; */
 }
 
 .ticket {
