--- a/command-registry-angular/frontend/command-registry-ui/src/app/command-list/command-list.component.html
+++ b/command-registry-angular/frontend/command-registry-ui/src/app/command-list/command-list.component.html
@@ -1,6 +1,7 @@
-<div class="error-msg" *ngIf="errorMessage">
+<!-- <p>commandlist works!</p> -->
+<div class="error-msg" *ngIf="error">
     <p>{{ error }}</p>
 </div>
-<div *ngIf="!errorMessage">
-    <app-my-commands [commands]="commands" (command)="onSelectCommand($event)"></app-my-commands>
+<div *ngIf="!error">
+    <app-command [commands]="commands"></app-command>
 </div>
