chanes in app component.html

--- a/reportgenerationangular/frontend/ReportGenerationUI/src/app/app.component.html
+++ b/reportgenerationangular/frontend/ReportGenerationUI/src/app/app.component.html
@@ -7,10 +7,10 @@
             <div>Reports</div>
         </mat-toolbar>
         <mat-nav-list class="menu">
-            <a mat-list-item routerLink="/reports" routerLinkActive="active">Track Tickets</a>
-            <a mat-list-item routerLink="/serviceoutlier">Service Outlier</a>
-            <a mat-list-item routerLink="/botreport">Bot Reliabilty</a>
-            <a mat-list-item routerLink="/csrreport">Csr Reliabilty</a>
+            <a mat-list-item class="font" routerLink="/reports" routerLinkActive="active">Track Tickets</a>
+            <a mat-list-item class="font" routerLink="/serviceoutlier">Service Outlier</a>
+            <a mat-list-item class="font" routerLink="/botreport">Bot Reliabilty</a>
+            <a mat-list-item class="font" routerLink="/csrreport">Csr Reliabilty</a>
         </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content>
