chanes in entity outlier.html

--- a/reportgenerationangular/frontend/ReportGenerationUI/src/app/entity-outlier/entity-outlier.component.css
+++ b/reportgenerationangular/frontend/ReportGenerationUI/src/app/entity-outlier/entity-outlier.component.css
@@ -24,6 +24,7 @@
 .scroll {
     height: 350px;
     overflow: auto;
+    /* overflow-y: scroll; */
 }
 
 .mat-header-row {
@@ -50,6 +51,8 @@
     padding-top: 2%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    /* grid-column-gap: 10px;
+    grid-row-gap: 10px; */
 }
 
 .mat-checkbox {
@@ -78,4 +81,12 @@
     top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+.mat-cell {
+    font-size: 100%;
+}
+
+.mat-header-cell {
+    font-size: 100%;
 }
