--- a/reportgenerationangular/frontend/ReportGenerationUI/src/app/entity-outlier/entity-outlier.component.html
+++ b/reportgenerationangular/frontend/ReportGenerationUI/src/app/entity-outlier/entity-outlier.component.html
@@ -6,14 +6,14 @@
 <div class="main">
 
     <mat-form-field class="example">
-        <input readonly matInput [matDatepicker]="picker" placeholder="select the date" (dateInput)="getStartDate($event.target.value)">
+        <input readonly matInput [max]="maxDate" [matDatepicker]="picker" placeholder="select start date" (dateInput)="getStartDate($event.target.value)">
         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
 
 
     <mat-form-field class="example">
-        <input readonly matInput [matDatepicker]="pickerTo" placeholder="select the date" (dateInput)="getEndDate($event.target.value)">
+        <input readonly matInput [max]="maxDate" [matDatepicker]="pickerTo" placeholder="select end date" (dateInput)="getEndDate($event.target.value)">
         <mat-datepicker-toggle matSuffix [for]="pickerTo"></mat-datepicker-toggle>
         <mat-datepicker #pickerTo></mat-datepicker>
     </mat-form-field>
