--- a/reportgenerationangular/frontend/ReportGenerationUI/src/app/list/list.component.css
+++ b/reportgenerationangular/frontend/ReportGenerationUI/src/app/list/list.component.css
@@ -53,7 +53,7 @@ section {
 .parent {
     padding-top: 2%;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     grid-column-gap: 10px;
     grid-row-gap: 10px;
 }
@@ -92,6 +92,7 @@ section {
 }
 
 .description {
+    font-size: 130%;
     padding-right: 5%;
 }
 
@@ -135,3 +136,8 @@ section {
 .numbering {
     font-size: 120%;
 }
+
+
+/* .mat-select {
+    font-size: 100%;
+} */
