authentication impletented in command registry angular

--- a/command-registry-angular/frontend/command-registry-ui/src/app/sidenav/sidenav.component.html
+++ b/command-registry-angular/frontend/command-registry-ui/src/app/sidenav/sidenav.component.html
@@ -4,8 +4,8 @@
             <mat-icon>menu</mat-icon>
         </mat-toolbar>
         <mat-nav-list>
-            <a mat-list-item routerLink="/commandlist">Command List</a>
-            <a mat-list-item routerLink="/trackissue">Track Issues</a>
+            <a mat-list-item routerLink="/home/commandlist">Command List</a>
+            <a mat-list-item routerLink="/home/trackissue">Track Issues</a>
         </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content>
