--- a/csr-angular/frontend/csr-ui/src/app/commandlist/commandlist.component.html
+++ b/csr-angular/frontend/csr-ui/src/app/commandlist/commandlist.component.html
@@ -2,7 +2,12 @@
 <div class="error-msg" *ngIf="error">
     <p>{{ error }}</p>
 </div>
-<div *ngIf="!error">
-    <app-command [commands]="commands"></app-command>
-
+<div class="spinner" *ngIf="!commands; else elseBlock">
+    <mat-spinner></mat-spinner>
 </div>
+<ng-template #elseBlock>
+    <div *ngIf="!error">
+        <app-command [commands]="commands"></app-command>
+
+    </div>
+</ng-template>
