--- a/csr-angular/frontend/csr-ui/src/app/suggestion/suggestion.component.html
+++ b/csr-angular/frontend/csr-ui/src/app/suggestion/suggestion.component.html
@@ -5,7 +5,7 @@
     fxLayoutGap="10px"
     fxLayoutGap.xs="0"
     *ngIf=status>
- <h3>Suggested command: </h3>   
+ <!-- <h3>Suggested command: </h3>    -->
  <div class="item item-1" fxFlex="30%">{{suggestions}}  </div>
  <div class="item item-2" fxFlex="10%">
    <mat-icon (click)="changeIconThumbUp('done')">
