--- a/reportgenerationangular/frontend/ReportGenerationUI/src/app/app.component.html
+++ b/reportgenerationangular/frontend/ReportGenerationUI/src/app/app.component.html
@@ -7,7 +7,7 @@
             <div>Reports</div>
         </mat-toolbar>
         <mat-nav-list class="menu">
-            <a mat-list-item class="font" routerLink="/reports" routerLinkActive="active">Track Tickets</a>
+            <a mat-list-item class="font" routerLink="/trackreports" routerLinkActive="active">Track Tickets</a>
             <a mat-list-item class="font" routerLink="/serviceoutlier">Service Outlier</a>
             <a mat-list-item class="font" routerLink="/botreport">BOT Reliabilty</a>
             <a mat-list-item class="font" routerLink="/csrreport">CSR Reliabilty</a>
