Test mail service

--- a/csr-angular/frontend/csr-ui/src/app/performance/performance.component.css
+++ b/csr-angular/frontend/csr-ui/src/app/performance/performance.component.css
@@ -5,3 +5,10 @@
 h1{
     text-align:center;
 }
+
+.spinner {
+    text-align: center;
+    padding-top: 50px;
+    margin-left: auto;
+    margin-right: auto;
+}
