--- a/csr-angular/frontend/csr-ui/src/app/commandlist/commandlist.component.html
+++ b/csr-angular/frontend/csr-ui/src/app/commandlist/commandlist.component.html
@@ -2,7 +2,7 @@
 <div class="error-msg" *ngIf="error">
     <p>{{ error }}</p>
 </div>
-<div class="spinner" *ngIf="!commands; else elseBlock">
+<div class="spinner" *ngIf="!commands && !error; else elseBlock">
     <mat-spinner></mat-spinner>
 </div>
 <ng-template #elseBlock>
