--- a/csr-angular/frontend/csr-ui/src/app/suggestion/suggestion.component.html
+++ b/csr-angular/frontend/csr-ui/src/app/suggestion/suggestion.component.html
@@ -19,7 +19,7 @@
  </div>
 </div>
 
-<div *ngIf="intents==undefined">
+<div *ngIf="intents.length == 0">
   <h3 class="mat-subheading-1">This query has no intent. Feel free to suggest the following details.</h3>
    <form [formGroup]="reportForm" (ngSubmit)="onSubmit(reportForm.value)" class="details">
    <mat-form-field>
