Minor modifications in csr component

--- a/csr-angular/frontend/csr-ui/src/app/commandlist/commandlist.component.css
+++ b/csr-angular/frontend/csr-ui/src/app/commandlist/commandlist.component.css
@@ -9,9 +9,9 @@ app-my-command{
     text-align: center;
 }
 
-.spinner {
+/* .spinner {
     text-align: center;
     padding-top: 50px;
     margin-left: auto;
     margin-right: auto;
-}
+} */
