--- a/command-registry-angular/frontend/command-registry-ui/src/app/track-issue/track-issue.component.css
+++ b/command-registry-angular/frontend/command-registry-ui/src/app/track-issue/track-issue.component.css
@@ -34,6 +34,6 @@ font-size: 50px;
   
 }  */
   
-#partitionSVG {
-  font-size: 15px !important;
-}
+/*#partitionSVG {*/
+/*  font-size: 15px !important;*/
+/*}*/
