--- a/command-registry-angular/frontend/command-registry-ui/src/app/nocommandmapped/nocommandmapped.component.html
+++ b/command-registry-angular/frontend/command-registry-ui/src/app/nocommandmapped/nocommandmapped.component.html
@@ -1,1 +1,10 @@
-<p>nocommandmapped works!</p>
+<!-- <p>nocommandmapped works!</p> -->
+
+<form>
+    <mat-form-field>
+      <mat-label>Text Box</mat-label>
+      <input matInput #first>
+      <mat-hint *ngIf="firstNameAutofilled">Autofilled!</mat-hint>
+    </mat-form-field>
+    <button mat-raised-button>Submit</button>
+  </form>
