app component html

--- a/reportgenerationangular/frontend/ReportGenerationUI/src/app/app.component.html
+++ b/reportgenerationangular/frontend/ReportGenerationUI/src/app/app.component.html
@@ -4,7 +4,7 @@
             <div>
                 <mat-icon class="icon-display" aria-hidden="false">trending_up</mat-icon>
             </div>
-            <div>Reports</div>
+            <div class="heading"><b>Reports</b></div>
         </mat-toolbar>
         <mat-nav-list class="menu">
             <a mat-list-item class="font" routerLink="/reports" routerLinkActive="active">Track Tickets</a>
