--- a/reportgenerationangular/frontend/ReportGenerationUI/src/app/entity-outlier/entity-outlier.component.html
+++ b/reportgenerationangular/frontend/ReportGenerationUI/src/app/entity-outlier/entity-outlier.component.html
@@ -35,7 +35,7 @@
                 </ng-container>
 
                 <ng-container matColumnDef="queriesRaised">
-                    <mat-header-cell *matHeaderCellDef> <b>Queries Count</b> </mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef> <b>No. of Queries Raised</b> </mat-header-cell>
                     <mat-cell *matCellDef="let element"> {{element.queriesRaised}} </mat-cell>
                 </ng-container>
 
