excepting handling for method

--- a/csr-angular/frontend/csr-ui/src/app/navigation/navigation.component.html
+++ b/csr-angular/frontend/csr-ui/src/app/navigation/navigation.component.html
@@ -7,7 +7,12 @@
       <p> {{ csrmail }} </p>
     </mat-toolbar>
     <mat-nav-list>
-        
+      <a mat-list-item routerLink="/home/openticket">
+        <i class="material-icons">
+          home
+        </i>
+        Home
+      </a>  
       <a mat-list-item routerLink="/home/commandlist">
         <i class="material-icons">
           format_list_bulleted
