lint error removed

--- a/command-registry-angular/frontend/command-registry-ui/src/app/track-issue/track-issue.component.css
+++ b/command-registry-angular/frontend/command-registry-ui/src/app/track-issue/track-issue.component.css
@@ -32,7 +32,6 @@ font-size: 50px;
     /* font: 30px; */
 }
 
-.scroll {
-    overflow-x: hidden;
-    overflow-y: hidden;
+html {
+    overflow-x: initial !important;
 }
