--- a/command-registry-angular/frontend/command-registry-ui/src/app/track-issue/track-issue.component.html
+++ b/command-registry-angular/frontend/command-registry-ui/src/app/track-issue/track-issue.component.html
@@ -32,8 +32,8 @@
         <mat-table [dataSource]="dataSource" class="mat-elevation-z8">
             <!-- Position Column -->
             <ng-container matColumnDef="name">
-                <mat-header-cell *matHeaderCellDef> Queries </mat-header-cell>
-                <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
+                <mat-header-cell *matHeaderCellDef style="font-size:  30px;"> Queries </mat-header-cell>
+                <mat-cell *matCellDef="let element" style="font-size: 25px;"> {{element.name}} </mat-cell>
             </ng-container>
             <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
             <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
